test/conformance/chainsaw/cli/test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-value
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: kyverno test .
        check:
          ($error != null): true
          ($stderr): "Error: 1 tests failed"
