test/conformance/chainsaw/cli/test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-no-cpu-limits
policies:
  - policy
  .yaml
resources:
  - resources.yaml
results:
  - kind: Job
    policy: no-cpu-limits
    resources:
      - job-pass
    result: fail # Expecting the test to fail
    rule: check-cpu-limits
